# FastAPI_credits_project

./: pyproject.toml
credits_app/: config.py  main.py  models.py  plans_test.xlsx  test.db  tests.py
