[tool.poetry]
name = "fastapi-credits-project"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
openpyxl = "^3.1.5"
mysql-connector-python = "^9.0.0"
pandas = "^2.2.3"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
